Fixing issue with flipcards on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -279,7 +279,7 @@ header.container-fluid {
     padding-right: 1rem;
 }
 
-.card-single:hover{
+.card-single:hover, .card-single:active{
 	transform:rotateY(180deg)
 }
 
